# prose-app-web

./: .browserslistrc  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .stylelintrc  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  bundle.yml  nightly.yml  test-windows.yml  test.yml
config/: common.json  development.json  production.json
env/nginx/: mime.types  nginx.conf  site.conf
public/sounds/alerts/: action-success.m4a
public/sounds/call/: ringtone-pending.m4a
res/builders/: inline.ts
src/: App.vue  main.ts  shims-plugins.d.ts  shims-vue.d.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/crates/notifications/: Cargo.toml  build.rs
src-tauri/crates/notifications/objc/: helper.m  notification.m
src-tauri/crates/notifications/src/: delegate.rs  lib.rs  misc.rs  notification.rs  notification_struct.rs
src-tauri/icons/: icon.icns
src-tauri/scripts/: updater.sh
src-tauri/src/: connection.rs  download.rs  logger.rs  main.rs  menu.rs  notifications.rs
src/assemblies/app/: AppSidebar.vue
src/assemblies/inbox/: InboxDetails.vue  InboxDetailsChannel.vue  InboxDetailsGroup.vue  InboxDetailsUser.vue  InboxForm.vue  InboxMessaging.vue  InboxTopbar.vue  InboxUserinfo.vue
src/assemblies/initiate/: InitiateLoginForm.vue
src/assemblies/spotlight/: SpotlightBrowseTopbar.vue  SpotlightTopbar.vue
src/assemblies/start/: StartLoginForm.vue
src/assets/stylesheets/: all.scss
src/bootstrap/: components.ts  config.ts  features.ts  filters.ts  icons.ts  plugins.ts  styles.ts
src/broker/: client.ts  connection.ts  context.ts  delegate.ts  encryption.ts  encryption_service.ts  index.ts  logger.ts
src/broker/builders/: caps.ts  reactions.ts
src/broker/connection/: index.ts  native.ts  provider.ts  relayed.ts  websocket.ts
src/broker/events/: index.ts  ingestor.ts  iq.ts  message.ts  presence.ts
src/broker/modules/: account.ts  channel.ts  chat.ts  connection.ts  data.ts  index.ts  mam.ts  message.ts  muc.ts  presence.ts  profile.ts  room.ts  roster.ts  status.ts
src/broker/stanzas/: iq.ts  message.ts  presence.ts  xmlns.ts
src/cards/inbox/: MessageAuthor.vue  MessageReaction.vue
src/commons/: config.ts  icons.ts
src/components/base/: BaseAction.vue  BaseAlert.vue  BaseAvatar.vue  BaseBadge.vue  BaseBadgeDetails.vue  BaseBanner.vue  BaseButton.vue  BaseCard.vue  BaseClient.vue  BaseCount.vue  BaseDataTable.vue  BaseDivider.vue  BaseField.vue  BaseFlag.vue  BaseFloater.vue  BaseForeground.vue  BaseHello.vue  BaseIcon.vue  BaseIndicatorLevel.vue  BaseLogo.vue  BaseModal.vue  BaseNavigate.vue  BaseNavigateSection.vue  BaseOverlay.vue  BasePlaceholderImage.vue  BasePlatformLogo.vue  BasePopover.vue  BasePopoverList.vue  BasePopup.vue  BasePopupActions.vue  BasePresence.vue  BaseProseLogo.vue  BaseSample.vue  BaseSeparator.vue  BaseServerLogo.vue  BaseSpace.vue  BaseSpinner.vue  BaseStreamView.vue  BaseTooltip.vue  BaseTooltipOverlay.vue
src/components/form/: FormCheckbox.vue  FormField.vue  FormFieldSuggest.vue  FormFieldset.vue  FormFieldsetControl.vue  FormFieldsetField.vue  FormFieldsetNotes.vue  FormSelect.vue  FormSettingsEditor.vue  FormToggle.vue
src/components/inbox/: InboxBanner.vue  InboxDetailsGenericActions.vue  InboxDetailsGroupIdentity.vue  InboxDetailsGroupInformation.vue  InboxDetailsGroupMembers.vue  InboxDetailsMultiIdentity.vue  InboxDetailsMultiInformation.vue  InboxDetailsMultiMembers.vue  InboxDetailsUserIdentity.vue  InboxDetailsUserInformation.vue  InboxDetailsUserSecurity.vue  InboxDetailsUserSecurityDetailsEncryption.vue  InboxDetailsUserSecurityDetailsIdentity.vue  InboxDropzone.vue  InboxFilePreview.vue  InboxFormAttach.vue  InboxFormChatstate.vue  InboxFormFormatting.vue  InboxFormLoader.vue  InboxFormPreview.vue  InboxFormRecorder.vue  InboxMessaging.vue  InboxMessagingAlert.vue  InboxUserinfoActions.vue  InboxUserinfoIdentity.vue  InboxUserinfoInformation.vue  InboxUserinfoSecurity.vue  InboxUserinfoSecurityDetailsEncryption.vue  InboxUserinfoSecurityDetailsIdentity.vue
src/components/initiate/: InitiateLoginForm.vue  InitiateServerIdentity.vue
src/components/layout/: LayoutActions.vue  LayoutAvatarPresence.vue  LayoutPopupNavigate.vue  LayoutSidebarDetails.vue  LayoutToolbar.vue  LayoutView.vue
src/components/list/: ListBrowse.vue  ListBrowseResult.vue  ListButton.vue  ListDisclosure.vue  ListDivider.vue  ListEntry.vue  ListItem.vue
src/components/sidebar/: SidebarContext.vue  SidebarContextAccount.vue  SidebarHeader.vue  SidebarMain.vue  SidebarMainActionAdd.vue  SidebarMainItem.vue  SidebarMainItemAdd.vue  SidebarMainItemChannel.vue  SidebarMainItemGeneric.vue  SidebarMainItemMulti.vue  SidebarMainItemSection.vue  SidebarMainItemUser.vue  SidebarMainSection.vue
src/composables/: channel.ts  events.ts  interface.ts  roster.ts  timer.ts
src/filters/: color.ts  date.ts  string.ts
src/layout/: GlobalAlert.vue
src/router/: index.ts
src/store/: index.ts
src/utilities/: audio.ts  context.ts  date.ts  file.ts  geolocation.ts  jid.ts  logger.ts  media.ts  runtime.ts  title.ts  upload.ts  video.ts
(+118 files in other folders)
