[package]
name = "prose-app-web"
version = "0.0.0"
description = "Prose Web application (Tauri bundle)"
authors = ["Prose Foundation <dev@prose.org>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [ "tray-icon", "macos-private-api"] }
tauri-plugin-deep-link = "2.2.1"
tauri-plugin-updater = "2.7.0"
tauri-plugin-process = "2.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2.2.1"
tauri-plugin-notification = "2.2.2"
tauri-plugin-log = "2.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.21"
time = { version = "0.3.34", features = ["formatting", "local-offset"] }
directories = "5.0.1"
reqwest = "0.12.15"
tokio = { version = "1.44.2", features = ["full"] }
rustls = { version = "0.23.26", features = ["ring"] }
thiserror = "1.0.58"
percent-encoding = "2.3.1"
uuid = { version = "1.8.0", features = ["v4"] }
libc = "0.2.172"
send_wrapper = "0.6.0"
futures = "0.3"
jid = { version = "0.11.1", default-features = false }
tokio-xmpp = "4.0.0"

[target."cfg(target_os = \"macos\")".dependencies]
notifications = { git = "https://github.com/dscso/mac-notifications.git", rev = "c7788fc" }
window-vibrancy = "0.6.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
strip = true
