[package]
name = "prose-app-web"
version = "0.0.0"
description = "Prose Web application (Tauri bundle)"
authors = ["Prose Foundation <dev@prose.org>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.1", features = [ "tray-icon", "macos-private-api"] }
tauri-plugin-deep-link = "2.4.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-notification = "2.3.0"
tauri-plugin-log = "2.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
directories = "6.0.0"
reqwest = "0.12.20"
tokio = { version = "1.45.1", features = ["full"] }
rustls = { version = "0.23.28", features = ["ring"] }
thiserror = "2.0.12"
percent-encoding = "2.3.1"
uuid = { version = "1.17.0", features = ["v4"] }
libc = "0.2.174"
send_wrapper = "0.6.0"
futures = "0.3.31"
jid = { version = "0.11.1", default-features = false }
tokio-xmpp = "4.0.0"

[target."cfg(target_os = \"macos\")".dependencies]
notifications = { git = "https://github.com/dscso/mac-notifications.git", rev = "c7788fc" }
window-vibrancy = "0.6.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
lto = true
strip = true
