[package]
name = "notifications"
version = "0.0.0"
edition = "2021"

[build-dependencies]
cc = "1.0.90"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }
objc2 = "0.5.1"
objc2-foundation = { version = "0.2.0", features = [
    "NSDistributedNotificationCenter",
    "NSUserNotification",
    "NSString",
    "NSNotification",
    "NSError",
    "NSURL",
    "NSThread",
    "NSObjCRuntime",
    "NSRunLoop",
    "NSZone",
] }
objc2-app-kit = { version = "0.2.0", features = [
    "NSImage",
    "NSApplication",
    "NSAccessibilityProtocols",
    "NSResponder",
    "NSDockTile"
] }
